# src/openapi/api.yml
@@ -1824,6 +1824,88 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/InternalServerError'
+    delete:
+      tags:
+        - Players 🧑‍🤝‍🧑
+      security:
+        - bearerAuth: []
+      summary: Delete a specific player by ID
+      description: |
+        Delete a specific player by their unique ID.
+        This endpoint allows you to remove details of a specific player using their unique identifier (UUIDv4).
+      x-eov-operation-handler: playerController
+      operationId: deleteById
+      parameters:
+        - in: path
+          name: accountId
+          schema:
+            type: string
+            description: The unique identifier for the account (UUIDv4).
+            example: '123e4567-e89b-12d3-a456-426614174000'
+          required: true
+        - in: path
+          name: playerId
+          schema:
+            type: string
+            description: The unique identifier for the player (UUIDv4).
+            example: '123e4567-e89b-12d3-a456-426614174000'
+          required: true
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  statusCode:
+                    type: integer
+                    description: HTTP status code indicating success.
+                    default: 200
+                  message:
+                    type: string
+                    description: Descriptive message of the success.
+                    default: OK
+                required:
+                  - statusCode
+                  - message
+                additionalProperties: false
+        400:
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BadRequest'
+        401:
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Unauthorized'
+        403:
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Forbidden'
+        404:
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/NotFound'
+        409:
+          description: Conflict
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Conflict'
+        500:
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InternalServerError'
   /applications/{applicationId}/courts:
     post:
       tags:
